--- a/nginx/default.conf
+++ b/nginx/default.conf
@@ -1,12 +1,22 @@
-upstream fibpet {
-	server fibpet:8080;
+upstream fibpet-client {
+    server fibpet-client:80;
+}
+
+upstream fibpet-server {
+	server fibpet-server:8080;
 }
 
 server {
+
 	listen 80;
 	
 	location / {
-		rewrite /fbncci/(.*) /$1 break;
-		proxy_pass http://fibpet;	
-	}
+        proxy_pass http://fibpet-client;    
+    }
+    
+	location /rest {
+        rewrite /rest/(.*) /$1 break;
+        proxy_pass http://fibpet-server;    
+    }
+	    
 }
